# mandelbrot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/imgui/: CMakeLists.txt  imconfig.h
src/: gui.cpp  gui.h  main.cpp
src/shaders/: mandel.frag  mandel.vert  shaders.cpp  shaders.h
src/shaders/colormaps/: IDL_16_Level.frag  IDL_Beach.frag  IDL_Black-White_Linear.frag  IDL_Blue-Green-Red-Yellow.frag  IDL_Blue-Pastel-Red.frag  IDL_Blue-Red.frag  IDL_Blue-Red_2.frag  IDL_Blue-White_Linear.frag  IDL_Blue_Waves.frag  IDL_CB-Accent.frag  IDL_CB-Blues.frag  IDL_CB-BrBG.frag  IDL_CB-BuGn.frag  IDL_CB-BuPu.frag  IDL_CB-Dark2.frag  IDL_CB-GnBu.frag  IDL_CB-Greens.frag  IDL_CB-Greys.frag  IDL_CB-OrRd.frag  IDL_CB-Oranges.frag  IDL_CB-PRGn.frag  IDL_CB-Paired.frag  IDL_CB-Pastel1.frag  IDL_CB-Pastel2.frag  IDL_CB-PiYG.frag  IDL_CB-PuBu.frag  IDL_CB-PuBuGn.frag  IDL_CB-PuOr.frag  IDL_CB-PuRd.frag  IDL_CB-Purples.frag  IDL_CB-RdBu.frag  IDL_CB-RdGy.frag  IDL_CB-RdPu.frag  IDL_CB-RdYiBu.frag  IDL_CB-RdYiGn.frag  IDL_CB-Reds.frag  IDL_CB-Set1.frag  IDL_CB-Set2.frag  IDL_CB-Set3.frag  IDL_CB-Spectral.frag  (+66 more)
